--- a/content/publication/hong-coronary-2017/cite.bib
+++ b/content/publication/hong-coronary-2017/cite.bib
@@ -4,7 +4,7 @@
  booktitle = {2017 IEEE 14th International Symposium on Biomedical Imaging (ISBI 2017)},
  doi = {10.1109/ISBI.2017.7950696},
  file = {IEEE Xplore Abstract Record:files/39/7950696.html:text/html},
- keywords = {adaptive boost regressor, Arteries, biomedical ultrasonics, blood vessels, brief convolutional network, cardiology, CCTA-intravascular ultrasound image, Classification, Computer architecture, convolutional neural network, Convolutional neural network, Coronary artery, coronary artery segmentation, coronary luminal, coronary wall mask prediction, Deep learning, extremely randomized tree regressor, Feature extraction, image segmentation, Image segmentation, image view, learning (artificial intelligence), medical image processing, neural nets, Neural networks, Plaque quantification, probability, regression analysis, Training, Ultrasonic imaging},
+ keywords = {Coronary artery, Deep learning, Image segmentation, adaptive boost regressor, Arteries, biomedical ultrasonics, blood vessels, brief convolutional network, cardiology, CCTA-intravascular ultrasound image, Classification, Computer architecture, convolutional neural network, Convolutional neural network, coronary artery segmentation, coronary luminal, coronary wall mask prediction, extremely randomized tree regressor, Feature extraction, image segmentation, image view, learning (artificial intelligence), medical image processing, neural nets, Neural networks, Plaque quantification, probability, regression analysis, Training, Ultrasonic imaging},
  month = {April},
  note = {ISSN: 1945-8452},
  pages = {1049--1052},
