--- a/content/publication/jeon-maximum-2017/cite.bib
+++ b/content/publication/jeon-maximum-2017/cite.bib
@@ -5,7 +5,7 @@
  file = {ScienceDirect Snapshot:files/25/S003132031730105X.html:text/html},
  issn = {0031-3203},
  journal = {Pattern Recognition},
- keywords = {Aorta localization, Bayesian, Cardiac CT, Coronary seed, MAP, Pairwise},
+ keywords = {Bayesian, Aorta localization, Cardiac CT, Coronary seed, MAP, Pairwise},
  language = {en},
  month = {August},
  pages = {222--232},
