--- a/content/publication/jia-image-based-nodate/cite.bib
+++ b/content/publication/jia-image-based-nodate/cite.bib
@@ -1,4 +1,4 @@
-@misc{jia_image-based_nodate,
+@article{jia_image-based_nodate,
  author = {Jia, Dongjie and Jeon, Byunghwan and Park, Hyung-Bok and Chang, Hyuk-Jae and Zhang, Lucy},
  file = {Image-Based Flow Simulations of Pre- and Post-left Atrial Appendage Closure in the Left Atrium | SpringerLink:files/7/s13239-019-00412-7.html:text/html},
  title = {Image-Based Flow Simulations of Pre- and Post-left Atrial Appendage Closure in the Left Atrium \textbar SpringerLink},
