--- a/content/publication/jung-deep-2018/cite.bib
+++ b/content/publication/jung-deep-2018/cite.bib
@@ -6,7 +6,7 @@
  doi = {10.1007/978-3-030-00536-8_11},
  editor = {Gooya, Ali and Goksel, Orcun and Oguz, Ipek and Burgos, Ninon},
  isbn = {978-3-030-00536-8},
- keywords = {Computed tomography, Coronary artery, Deep learning, Motion artifact compensation, Style-transfer},
+ keywords = {Coronary artery, Computed tomography, Deep learning, Motion artifact compensation, Style-transfer},
  language = {en},
  pages = {100--110},
  publisher = {Springer International Publishing},
