--- a/content/publication/park-abstract-nodate/cite.bib
+++ b/content/publication/park-abstract-nodate/cite.bib
@@ -1,4 +1,4 @@
-@misc{park_abstract_nodate,
+@inproceedings{park_abstract_nodate,
  author = {Park, Hyung-Bok and Jeon, Byunghwan and Shin, Sanghoon and Hong, Yoonmi and Chang, Hyuk-Jae},
  file = {Abstract 19704\: Incomplete Left Atrial Appendage Closure Prediction Using Novel Three-Dimensional Computed Tomography Geometric Analysis | Circulation:files/23/circ.136.suppl_1.html:text/html},
  title = {Abstract 19704: Incomplete Left Atrial Appendage Closure Prediction Using Novel Three-Dimensional Computed Tomography Geometric Analysis \textbar Circulation},
