--- a/content/publication/han-automatic-nodate/cite.bib
+++ b/content/publication/han-automatic-nodate/cite.bib
@@ -1,4 +1,4 @@
-@misc{han_automatic_nodate,
+@article{han_automatic_nodate,
  author = {Han, Dongjin and Shim, Hackjoon and Jeon, Byunghwan and Jang, Yeonggul and Hong, Youngtaek and Jung, Sunghee and Ha, Seongmin and Chang, Hyuk-Jae},
  file = {Automatic Coronary Artery Segmentation Using Active Search for Branches and Seemingly Disconnected Vessel Segments from Coronary CT Angiography:files/31/PMC4990346.html:text/html},
  title = {Automatic Coronary Artery Segmentation Using Active Search for Branches and Seemingly Disconnected Vessel Segments from Coronary CT Angiography},
