--- a/content/publication/park-novel-nodate/cite.bib
+++ b/content/publication/park-novel-nodate/cite.bib
@@ -1,7 +1,7 @@
-@misc{park_novel_nodate,
+@inproceedings{park_novel_nodate,
  author = {Park, Hyung-Bok and Jeon, Byunghwan and Hong, Yoonmi and Chang, Hyuk-Jae},
  file = {NOVEL THREE-DIMENSIONAL GEOMETRIC METHOD USING COMPUTED TOMOGRAPHY FOR PREDICTING THE INCOMPLETE OCCLUSION OF LEFT ATRIAL APPENDAGE CLOSURE | JACC\: Journal of the American College of Cardiology:files/27/1649.html:text/html},
- title = {NOVEL THREE-DIMENSIONAL GEOMETRIC METHOD USING COMPUTED TOMOGRAPHY FOR PREDICTING THE INCOMPLETE OCCLUSION OF LEFT ATRIAL APPENDAGE CLOSURE \textbar JACC: Journal of the American College of Cardiology},
+ title = {Novel three-dimensional geometric method using computed tomography for predicting the incomplete occlusion of left atrial appendage closure},
  url = {http://www.onlinejacc.org/content/69/11_Supplement/1649.abstract},
  urldate = {2020-03-03}
 }
