--- a/content/publication/park-tct-383-2018/cite.bib
+++ b/content/publication/park-tct-383-2018/cite.bib
@@ -1,16 +1,14 @@
-@article{park_tct-383_2018,
+@inproceedings{park_tct-383_2018,
  abstract = {Fractional flow reserve (FFR) is currently the gold standard for assessment of coronary lesion-specific ischemia. Virtual fractional flow reserve (vFFR) derived from coronary computed tomography angiography (CTA), which is based on a parallel computing method which does not require a supercomputer,},
  author = {Park, Hyung-Bok and Jang, Yeonggul and Nguyen, Minh Tuan and Jeon, Byunghwan and Arsanjani, Reza and Lee, Sang-Wook and Chang, Hyuk-Jae},
+ booktitle = {Journal of the American College of Cardiology},
  copyright = {© 2018},
  doi = {10.1016/j.jacc.2018.08.1539},
  file = {Full Text PDF:files/20/Park 등 - 2018 - TCT-383 Clinical Utility of a Novel On-site Virtua.pdf:application/pdf;Snapshot:files/22/B155.2.html:text/html},
- issn = {0735-1097, 1558-3597},
- journal = {Journal of the American College of Cardiology},
  language = {en},
  month = {September},
  note = {Publisher: Journal of the American College of Cardiology
 Section: Moderated Posters},
- number = {13 Supplement},
  pages = {B155},
  shorttitle = {TCT-383 Clinical Utility of a Novel On-site Virtual Fractional Flow Reserve Parallel Computing System},
  title = {TCT-383 Clinical Utility of a Novel On-site Virtual Fractional Flow Reserve Parallel Computing System: Comparison with Invasive Fractional Flow Reserve},
